--- a/_includes/new_public_data_form.html
+++ b/_includes/new_public_data_form.html
@@ -1,6 +1,6 @@
 <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mvollobv" method="post">
   <fieldset id="fs-frm-inputs">
-    <label for="message">Data indentification</label>
+    <label for="message" required="">Data indentification</label>
     <input type="text" name="_data_identifies" id="data_identifier" placeholder="DOI of the paper, PubMed ID (PMID), GEO identifier (GSE) or other data suitable to identify the data" required="1">
     <label for="full-name">Full Name (optional)</label>
     <input type="text" name="name" id="full-name" placeholder="First and Last">
