Update and rename _includes/head/custom.html to _includes/footer/custom.html

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,4 +1,4 @@
-<!-- head_custom_2 -->
+<!-- bregin head_custom_2 -->
 {% if page.page_js %}
   {% for js in page.page_js %}
     <script type="text/javascript" language="javascript" src="{{ js }}"></script>
@@ -9,3 +9,4 @@
     <link rel="stylesheet" href="{{ stylesheet  }}">
   {% endfor %}
 {% endif %}
+<!-- end head_custom_2 -->
