--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -4,13 +4,14 @@
   method="POST"
 >
   <label>
-    Your email:
+    <label for="message" required="">Your email<span id="required_note">*</span></label>
     <input type="email" name="email">
   </label>
   <label>
-    Your message:
+    Optional message:
     <textarea name="message"></textarea>
   </label>
   <!-- your other form fields go here -->
+  <div id="required_note">* Required</div>
   <button type="submit">Send</button>
 </form>
