--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -5,11 +5,11 @@
 >
   <label>
     <label for="message" required="">Your email<span id="required_note">*</span></label>
-    <input type="email" name="email">
+    <input type="email" name="email" placeholder="email@domain.tld">
   </label>
   <label>
     Optional message:
-    <textarea name="message"></textarea>
+    <textarea placeholder="Keep me updated about this project." name="message"></textarea>
   </label>
   <!-- your other form fields go here -->
   <div id="required_note">* Required</div>
