--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -1,5 +1,5 @@
 <!-- modify this form HTML and place wherever you want your form -->
-<form
+<form id="fs-frm"
   action="https://formspree.io/f/xvolldeo"
   method="POST"
 >
