--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -3,14 +3,10 @@
   action="https://formspree.io/f/xvolldeo"
   method="POST"
 >
-  <label>
     <label for="message" required="">Your email<span id="required_note">*</span></label>
     <input type="email" name="email" placeholder="email@domain.tld">
-  </label>
-  <label>
-    Optional message:
+    <label>Optional message:  </label>
     <textarea placeholder="Keep me updated about this project." name="message"></textarea>
-  </label>
   <!-- your other form fields go here -->
   <div id="required_note">* Required</div>
   <button type="submit">Send</button>
