--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -6,7 +6,7 @@
     <label for="message" required="">Your email<span id="required_note">*</span></label>
     <input type="email" name="email" placeholder="email@domain.tld">
     <label>Optional message:  </label>
-    <textarea placeholder="Keep me updated about this project." name="message"></textarea>
+    <textarea placeholder="Describe your request." name="message"></textarea>
   <!-- your other form fields go here -->
   <div id="required_note">* Required</div>
   <button type="submit">Send</button>
